// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Members/> Should render <Members /> with one member 1`] = `
<DocumentFragment>
  <div
    class="af-header"
  >
    <div
      class="container af-header__wrapper"
    >
      <header
        class="af-header__content"
        role="banner"
      >
        <div
          class="af-header__name af-header__name--slash"
        >
          <a
            class="af-logo"
            href="/"
          >
            <img
              alt="Toolkit React Starter"
              class="af-logo__brand"
              src="slash-logo.svg"
            />
          </a>
          <h2
            class="af-header__title"
          >
            Toolkit React Starter
            <span
              class="af-header__subtitle"
            >
              by Slash Design System
            </span>
          </h2>
        </div>
        <div
          class="af-info-user"
        >
          <a
            class="af-info-user__link"
            href="#"
            title="Voir mon profil"
          >
            <span
              class="af-info-user__name"
            />
            <span
              class="af-info-user__profile"
            >
              [inconnu]
            </span>
          </a>
        </div>
      </header>
    </div>
  </div>
  <section
    class="af-menu"
  >
    <div
      class="af-nav-container"
    >
      <button
        aria-controls="mainmenu"
        aria-haspopup="true"
        class="mask fade "
        id="togglemenu"
        type="button"
      />
      <nav
        aria-label="Menu principal"
        class="af-nav af-drawer left "
        role="navigation"
      >
        <div
          class="container af-nav__wrapper"
        >
          <div
            class="af-nav__aside-header"
          >
            <h4
              class="af-nav__aside-title"
            >
              Menu
            </h4>
            <button
              aria-controls="mainmenu"
              aria-haspopup="true"
              class="af-nav__aside-close"
              id="togglemenu"
              type="button"
            >
              ×
            </button>
          </div>
          <ul
            aria-labelledby="togglemenu"
            class="af-nav__list "
            id="mainmenu"
            role="menubar"
          >
            <li
              class="af-nav__item af-nav__item--active "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Accueil"
                class="af-nav__link"
                href="/"
                role="menuitem"
                tabindex="0"
              >
                Accueil
              </a>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Démos"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Démos
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Membres"
                    class="af-nav__link"
                    href="/demos/members"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Membres
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Rechercher"
                    class="af-nav__link"
                    href="/demos/search-members"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Rechercher
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Modal"
                    class="af-nav__link"
                    href="/demos/modal"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Modal
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Notification"
                    class="af-nav__link"
                    href="/demos/notification"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Notification
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Layout"
                    class="af-nav__link"
                    href="/demos/layout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Layout
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toolkit components"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Toolkit components
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Button"
                    class="af-nav__link"
                    href="/demos/button"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Button
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Alert"
                    class="af-nav__link"
                    href="/demos/alert"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Alert
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toolkit form components"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Toolkit form components
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Text Input"
                    class="af-nav__link"
                    href="/demos/text-input"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Text Input
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Tabs"
                    class="af-nav__link"
                    href="/demos/tabs"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Tabs
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <span
                aria-expanded="false"
                class="af-nav__link"
                role="menuitem"
                tabindex="-1"
              >
                Pages
              </span>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Not found"
                    class="af-nav__link"
                    href="/notfound"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Not found
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Forbidden"
                    class="af-nav__link"
                    href="/forbidden"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Forbidden
                  </a>
                </li>
              </ul>
            </li>
          </ul>
        </div>
      </nav>
    </div>
  </section>
  <a
    aria-controls="mainmenu"
    aria-haspopup="true"
    class="btn af-title-bar__mobile-menu af-btn--circle"
    href="#"
    id="opentogglemenu"
    role="button"
    tabindex="0"
    title="Open toggle menu"
  >
    <i
      class="glyphicon glyphicon-menu-hamburger"
    />
  </a>
  <div
    class="af-title-bar af-title-bar--backhome"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <h1
        class="af-title-bar__title"
      >
        Gestion des membres
      </h1>
      <a
        aria-label="Retour à l'accueil"
        class="btn af-btn--circle"
        href="/"
      >
        <i
          class="glyphicon glyphicon-home"
        />
      </a>
    </div>
  </div>
  <main
    class="af-main"
  >
    <section
      class="container"
    >
      <h1
        class="af-title--content"
      >
        Liste des membres
      </h1>
      <div
        class="af-loader"
      >
        <table
          aria-label="Tableau Liste des membres"
          class="af-table"
        >
          <thead
            aria-label="table-header"
            class="af-table__thead"
          >
            <tr
              aria-label="table-header-line"
              class="af-table__tr"
            >
              <th
                class="af-table__th af-table__th--sortable af-table__th--active"
                role="button"
              >
                <span
                  class="af-table__th-label"
                >
                  Prénom
                </span>
                <span
                  class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-arrow-xs-up"
                />
              </th>
              <th
                class="af-table__th af-table__th--sortable"
                role="button"
              >
                <span
                  class="af-table__th-label"
                >
                  Nom
                </span>
                <span
                  class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-sorting"
                />
              </th>
              <th
                class="af-table__th af-table__th--sortable"
                role="button"
              >
                <span
                  class="af-table__th-label"
                >
                  Date de naissance
                </span>
                <span
                  class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-sorting"
                />
              </th>
              <th
                class="af-table__th"
                role="columnheader"
              >
                <span
                  class="af-table__th-label"
                >
                  Sexe
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            aria-label="table-body"
            class="af-table__body"
          >
            <tr
              aria-label="table-body-line"
              class="af-table__tr"
            >
              <td
                class="af-table__cell"
              >
                Samuel
              </td>
              <td
                class="af-table__cell"
              >
                Gomez
              </td>
              <td
                class="af-table__cell"
              >
                20/10/1985
              </td>
              <td
                class="af-table__cell"
              >
                M
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="af-paging"
        >
          <div
            class="af-paging__limit"
          >
            <div
              class="af-paging__limit"
            >
              <form
                class="af-paging__form"
              >
                <div
                  class="af-form__group"
                >
                  <div
                    class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
                  >
                    <label
                      class="af-form__group-label"
                      for="paging"
                    >
                      Afficher
                    </label>
                  </div>
                  <div
                    class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
                  >
                    <div
                      class="af-form__select"
                    >
                      <div
                        class="af-form__select-container"
                      >
                        <select
                          class="af-form__input-select"
                          id="paging"
                        >
                          <option
                            value="5"
                          >
                            5
                          </option>
                          <option
                            value="10"
                          >
                            10
                          </option>
                          <option
                            value="25"
                          >
                            25
                          </option>
                          <option
                            value="50"
                          >
                            50
                          </option>
                          <option
                            value="100"
                          >
                            100
                          </option>
                        </select>
                        <span
                          class="glyphicon glyphicon-menu-down"
                        />
                      </div>
                      <span
                        class="af-form__input-cmplt"
                      >
                        éléments
                      </span>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
          <div
            class="af-paging__pager"
          >
            <nav
              class="af-pager"
            >
              <ul
                class="af-pager__pagination"
              >
                <li
                  class="af-pager__item af-pager__item--disabled"
                >
                  <span
                    class="af-pager__item-nolink"
                  >
                    « Précédent
                  </span>
                </li>
                <li
                  class="af-pager__item af-pager__item--active"
                >
                  <a
                    class="af-pager__item-link"
                    href="#"
                  >
                    <span>
                      1
                    </span>
                  </a>
                </li>
                <li
                  class="af-pager__item af-pager__item--disabled"
                >
                  <span
                    class="af-pager__item-nolink"
                  >
                    Suivant »
                  </span>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </section>
  </main>
  <footer
    class="af-footer"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          src="logo-axa.svg"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2022 AXA Tous droits réservés - v0.2.9
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`<Members/> Should render Members 1`] = `
<DocumentFragment>
  <div
    class="af-header"
  >
    <div
      class="container af-header__wrapper"
    >
      <header
        class="af-header__content"
        role="banner"
      >
        <div
          class="af-header__name af-header__name--slash"
        >
          <a
            class="af-logo"
            href="/"
          >
            <img
              alt="Toolkit React Starter"
              class="af-logo__brand"
              src="slash-logo.svg"
            />
          </a>
          <h2
            class="af-header__title"
          >
            Toolkit React Starter
            <span
              class="af-header__subtitle"
            >
              by Slash Design System
            </span>
          </h2>
        </div>
        <div
          class="af-info-user"
        >
          <a
            class="af-info-user__link"
            href="#"
            title="Voir mon profil"
          >
            <span
              class="af-info-user__name"
            />
            <span
              class="af-info-user__profile"
            >
              [inconnu]
            </span>
          </a>
        </div>
      </header>
    </div>
  </div>
  <section
    class="af-menu"
  >
    <div
      class="af-nav-container"
    >
      <button
        aria-controls="mainmenu"
        aria-haspopup="true"
        class="mask fade "
        id="togglemenu"
        type="button"
      />
      <nav
        aria-label="Menu principal"
        class="af-nav af-drawer left "
        role="navigation"
      >
        <div
          class="container af-nav__wrapper"
        >
          <div
            class="af-nav__aside-header"
          >
            <h4
              class="af-nav__aside-title"
            >
              Menu
            </h4>
            <button
              aria-controls="mainmenu"
              aria-haspopup="true"
              class="af-nav__aside-close"
              id="togglemenu"
              type="button"
            >
              ×
            </button>
          </div>
          <ul
            aria-labelledby="togglemenu"
            class="af-nav__list "
            id="mainmenu"
            role="menubar"
          >
            <li
              class="af-nav__item af-nav__item--active "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Accueil"
                class="af-nav__link"
                href="/"
                role="menuitem"
                tabindex="0"
              >
                Accueil
              </a>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Démos"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Démos
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Membres"
                    class="af-nav__link"
                    href="/demos/members"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Membres
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Rechercher"
                    class="af-nav__link"
                    href="/demos/search-members"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Rechercher
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Modal"
                    class="af-nav__link"
                    href="/demos/modal"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Modal
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Notification"
                    class="af-nav__link"
                    href="/demos/notification"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Notification
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Layout"
                    class="af-nav__link"
                    href="/demos/layout"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Layout
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toolkit components"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Toolkit components
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Button"
                    class="af-nav__link"
                    href="/demos/button"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Button
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Alert"
                    class="af-nav__link"
                    href="/demos/alert"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Alert
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <a
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Toolkit form components"
                class="af-nav__link"
                href="/demos"
                role="menuitem"
                tabindex="-1"
              >
                Toolkit form components
              </a>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Text Input"
                    class="af-nav__link"
                    href="/demos/text-input"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Text Input
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Tabs"
                    class="af-nav__link"
                    href="/demos/tabs"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Tabs
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="af-nav__item af-nav__item--haschild "
              role="none"
            >
              <span
                aria-expanded="false"
                class="af-nav__link"
                role="menuitem"
                tabindex="-1"
              >
                Pages
              </span>
              <i
                class="glyphicon glyphicon-arrow-xs-down"
              />
              <ul
                aria-label=""
                class="af-nav__list af-nav__list--children"
                role="menu"
              >
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Not found"
                    class="af-nav__link"
                    href="/notfound"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Not found
                  </a>
                </li>
                <li
                  class="af-nav__item "
                  role="none"
                >
                  <a
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-label="Forbidden"
                    class="af-nav__link"
                    href="/forbidden"
                    role="menuitem"
                    tabindex="-1"
                  >
                    Forbidden
                  </a>
                </li>
              </ul>
            </li>
          </ul>
        </div>
      </nav>
    </div>
  </section>
  <a
    aria-controls="mainmenu"
    aria-haspopup="true"
    class="btn af-title-bar__mobile-menu af-btn--circle"
    href="#"
    id="opentogglemenu"
    role="button"
    tabindex="0"
    title="Open toggle menu"
  >
    <i
      class="glyphicon glyphicon-menu-hamburger"
    />
  </a>
  <div
    class="af-title-bar af-title-bar--backhome"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <h1
        class="af-title-bar__title"
      >
        Gestion des membres
      </h1>
      <a
        aria-label="Retour à l'accueil"
        class="btn af-btn--circle"
        href="/"
      >
        <i
          class="glyphicon glyphicon-home"
        />
      </a>
    </div>
  </div>
  <main
    class="af-main"
  >
    <section
      class="container"
    >
      <h1
        class="af-title--content"
      >
        Liste des membres
      </h1>
      <div
        class="af-loader"
      >
        <div
          class="af-paging"
        >
          <div
            class="af-paging__limit"
          >
            <div
              class="af-paging__limit"
            >
              <form
                class="af-paging__form"
              >
                <div
                  class="af-form__group"
                >
                  <div
                    class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
                  >
                    <label
                      class="af-form__group-label"
                      for="paging"
                    >
                      Afficher
                    </label>
                  </div>
                  <div
                    class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
                  >
                    <div
                      class="af-form__select"
                    >
                      <div
                        class="af-form__select-container"
                      >
                        <select
                          class="af-form__input-select"
                          id="paging"
                        >
                          <option
                            value="5"
                          >
                            5
                          </option>
                          <option
                            value="10"
                          >
                            10
                          </option>
                          <option
                            value="25"
                          >
                            25
                          </option>
                          <option
                            value="50"
                          >
                            50
                          </option>
                          <option
                            value="100"
                          >
                            100
                          </option>
                        </select>
                        <span
                          class="glyphicon glyphicon-menu-down"
                        />
                      </div>
                      <span
                        class="af-form__input-cmplt"
                      >
                        éléments
                      </span>
                    </div>
                  </div>
                </div>
              </form>
            </div>
          </div>
          <div
            class="af-paging__pager"
          >
            <nav
              class="af-pager"
            >
              <ul
                class="af-pager__pagination"
              >
                <li
                  class="af-pager__item af-pager__item--disabled"
                >
                  <span
                    class="af-pager__item-nolink"
                  >
                    « Précédent
                  </span>
                </li>
                <li
                  class="af-pager__item af-pager__item--active"
                >
                  <a
                    class="af-pager__item-link"
                    href="#"
                  >
                    <span>
                      1
                    </span>
                  </a>
                </li>
                <li
                  class="af-pager__item af-pager__item--disabled"
                >
                  <span
                    class="af-pager__item-nolink"
                  >
                    Suivant »
                  </span>
                </li>
              </ul>
            </nav>
          </div>
        </div>
      </div>
    </section>
  </main>
  <footer
    class="af-footer"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          src="logo-axa.svg"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2022 AXA Tous droits réservés - v0.2.9
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
